# rust-client-toolbox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  jwt_generator.nu  run_leger_exlorer.sh  rust-toolchain.toml  sandbox_init_with_asset.sh  sandbox_init_with_full.sh  sandbox_init_with_interface.sh  sandbox_init_with_optional.sh  sandbox_init_with_ticketoffer.sh  sandbox_init_with_ticketoffer_explicit_disclosure.sh
_canton-console/: start.sh
_canton-console/config/: remote-participant.conf
_daml/: multi-package.yaml
_daml/daml-asset/: daml.yaml  portfile.txt
_daml/daml-asset/daml/: Main.daml
_daml/daml-asset/main/: daml.yaml
_daml/daml-asset/main/daml/: Main.daml
_daml/daml-asset/test/: daml.yaml
_daml/daml-asset/test/daml/: Test.daml
_daml/daml-interface-example/: .gitignore
_daml/daml-interface-example/interfaces/: daml.yaml
_daml/daml-interface-example/main/: daml.yaml
_daml/daml-interface-example/main/daml/: Main.daml
_daml/daml-interface-example/test/: daml.yaml
_daml/daml-interface-example/test/daml/: Test.daml
_daml/daml-nested-test/: multi-package.yaml
_daml/daml-nested-test/main/: daml.yaml
_daml/daml-nested-test/main/daml/: Main.daml
_daml/daml-nested-test/main/daml/Main/: Types.daml
_daml/daml-nested-test/main/daml/Main/Types/: Address.daml
_daml/daml-optional/: daml.yaml
_daml/daml-optional/daml/: Main.daml
_daml/daml-optional/main/: daml.yaml
_daml/daml-optional/main/daml/: Main.daml
_daml/daml-optional/test/: daml.yaml
_daml/daml-optional/test/daml/: Test.daml
_daml/daml-ticketoffer/: daml.yaml  multi-package.yaml
_daml/daml-ticketoffer-explicit-disclosure/: start.sh
_daml/daml-ticketoffer-explicit-disclosure/main/: daml.yaml
_daml/daml-ticketoffer-explicit-disclosure/main/daml/: Main.daml
_daml/daml-ticketoffer-explicit-disclosure/test/: daml.yaml
_daml/daml-ticketoffer-explicit-disclosure/test/daml/: Setup.daml  Utils.daml
_daml/daml-ticketoffer/daml/: Main.daml
_daml/daml-ticketoffer/main/: daml.yaml
_daml/daml-ticketoffer/main/daml/: Main.daml
_daml/daml-ticketoffer/test/: daml.yaml
_daml/daml-ticketoffer/test/daml/: Test.daml
_daml/full/: daml.yaml
_daml/full/daml/: Main.daml
_daml/full/main/: daml.yaml
_daml/full/main/daml/: Main.daml
_daml/full/test/: daml.yaml
_daml/full/test/daml/: Test.daml
client/: Cargo.toml
client/src/: active_contracts.rs  get_blob.rs  jwt.rs  ledger_end.rs  lib.rs  main.rs  run_script.rs  stream_updates.rs  submit_commands.rs  testutils.rs  upload_dar.rs  utils.rs
client/src/party_management/: allocate_parties.rs  get_parties.rs  mod.rs
client/src/user_management/: create_user.rs  list_users.rs  mod.rs
codegen/: Cargo.toml  build.rs
codegen/src/: api_vs_lf.rs  archive.rs  lf_protobuf.rs  lib.rs  main.rs  package.rs  resolve_type.rs
codegen/src/codegen/: mod.rs  record_struct.rs
codegen/src/daml_custom_data_type_reps/: record.rs
daml-type-rep/: Cargo.toml
daml-type-rep/src/: built_in_types.rs  lapi_access.rs  lib.rs  numeric_scale.rs  template_id.rs
derive-lapi-access/: Cargo.toml
derive-lapi-access/src/: lib.rs
derive-lapi-access/tests/: derive_lapi_access.rs
docs/: update-tree-decompression.md
event-graph/: cert.sh
ledger-api/: Cargo.toml  build.rs
ledger-api/src/: lib.rs
ledger-api/src/pb/: com.daml.ledger.api.v2.admin.rs  com.daml.ledger.api.v2.interactive.rs  com.daml.ledger.api.v2.interactive.transaction.v1.rs  com.daml.ledger.api.v2.rs  com.daml.ledger.api.v2.testing.rs  google.rpc.rs
ledger-explorer/: CONNECTING_TO_VALIDATOR.md  Cargo.toml  README.md
ledger-explorer/config/: config.toml  config.toml.example
ledger-explorer/src/: api_record_to_json.rs  config.rs  cypher.rs  graph.rs  lib.rs  main.rs  sync.rs  template_registry.rs
ledger-graph-ui/: Cargo.toml  Dioxus.toml
ledger-graph-ui/assets/: main.css
ledger-graph-ui/src/: config.rs  main.rs
ledger-graph-ui/src/components/: app.rs  graph_canvas.rs  graph_edge.rs  graph_node.rs  mod.rs  query_editor.rs  sidebar.rs  toolbar.rs
ledger-graph-ui/src/models/: graph.rs  query.rs
ledger-graph-ui/src/server/: mod.rs  neo4j_pool.rs  queries.rs
ledger-graph-ui/src/state/: graph_state.rs
plans/: ledger-explorer-flattened-argument-properties.md
run-ledger-explorer/: README.md  docker-compose.yaml  neo4j_query_saved_cypher.csv  sync.sh
sandbox-init/: Cargo.toml
sandbox-init/src/: main.rs
submit/: Cargo.toml
submit/src/: create_contract.rs  exercise_choice.rs  lib.rs
submit/src/test_types/: asset.rs  give.rs  mod.rs
test/: Cargo.toml  build.rs
test/src/: lib.rs
test/src/asset/: template_asset.rs
test/src/full/: full.rs
test/src/interface_example/: interface_asset.rs  mod.rs
test/src/nested_test/: mod.rs
test/src/optional/: mod.rs  template_asset.rs
test/src/ticketoffer/: template_cash.rs  template_ticketoffer.rs
test/src/ticketoffer_explicit_disclosure/: mod.rs  template_cash.rs  template_ticketoffer.rs
wallet/: README.md
