[workspace]
resolver = "3"
members = [
    "client", 
    "codegen",
    "ledger-explorer",
    "ledger-api",
    "daml-type-rep",
    "derive-lapi-access",
    "wallet",
    "test", "submit"]

[workspace.dependencies]
tonic = { version = "0.13.1", features = ["transport"] }
tonic-build = "0.13.1"
prost = { version = "0.13.5", features = ["derive"] }
prost-build = "0.13.5"
prost-types = "0.13.5"
prost-wkt = "0.6.1"
prost-wkt-types = "0.6.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio-stream = "0.1.17"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
rust_decimal = "1"
serde_json = "1.0.140"
base64 = "0.22.1"
neo4rs = "0.9.0-rc.6"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
zip = "4.3.0"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
prettyplease = "0.2.36"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.30.1", features = ["signal"] }
regex = "1.10.4"
toml = "0.7"
