[package]
name = "ledger-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
client = { path = "../client" }
ledger-api = { path = "../ledger-api" }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
prost-types = { workspace = true }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
neo4rs = { workspace = true }
serde_json.workspace = true
anyhow = { workspace = true }