[package]
name = "ledger-graph-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "=0.7.2", features = ["fullstack", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neo4rs = { workspace = true }
tokio = { workspace = true }
