[package]
name = "ledger-graph-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
neo4rs = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
server = ["dioxus/server", "dep:neo4rs", "dep:tokio"]
web = ["dioxus/web"]
